fix images display on mobile

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -130,6 +130,7 @@ body{
 
                 .keep-track__features__img{
                     padding-bottom: 2rem;
+                    height: 100%;
                 }
 
                 .keep-track__features__content{
@@ -191,6 +192,7 @@ body{
 
             .access-clipboard-anywhere__img{
                 padding: 2rem 0 4rem 0;
+                height: 100%;
             }
         }
 
